--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # The Site Settings
 # v2.0
-# https://github.com/cotes2020/jekyll-theme-chirpy
+# https://github.com/jad19925/mj_cookbook
 # © 2017-2019 Cotes Chung
 # MIT licensed
 
@@ -8,7 +8,7 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy                          # the main title
+title: Jacob and Makayla's Family Cookbook  # the main title
 
 tagline: A text-focused Jekyll theme.  # it will display as the sub-title
 
@@ -18,25 +18,25 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'protocol://domain'
+url: 'https://jad19925.github.io/mj_cookbook'
 
-author: your_full_name                  # change to your full name
+author: Jacob Dahleen                  # change to your full name
 
 avatar: /assets/img/sample/avatar.jpg   # support internet resources
 
 github:
-  username: github_username             # change to your github username
+  username: jad19925             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: JacobDahleen            # change to your twitter username
 
 social:
   name: your_full_name                  # it will shows as the copyright owner in Footer
   email: example@doamin.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/JacobDahleen      # change to your twitter homepage
+    - https://github.com/jad19925       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -51,7 +51,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: America/Chicago
 
 google_analytics:
   id: ''          # Fill with your Google Analytics ID
