clean up some social stuff and add template without date in filename

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # The Site Settings
 # v2.0
 # https://github.com/jad19925/mj_cookbook
-# © 2017-2019 Cotes Chung
+# © 2020-2020 Jacob Dahleen
 # MIT licensed
 
 
