switch icon and favicons

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: 'https://jad19925.github.io'
 
 author: Jacob Dahleen                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /assets/img/sample/RedStar.png   # support internet resources
 
 github:
   username: jad19925             # change to your github username
